added new pages and data update for lawyers & clerks

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,30 @@
 <html lang="en" class="light">
 <head>
   <meta charset="utf-8">
-  <title>VISTA - Law Firm</title>
+  <title>VISTA Law | Expert Legal Services in Toronto, Ontario</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="VISTA Law provides expert legal services in Toronto, Ontario. Specializing in Corporate Law, Real Estate, Litigation, and more. Contact us for a consultation.">
+  <meta name="keywords" content="lawyer Toronto, legal services Ontario, corporate law, real estate lawyer, litigation attorney, Canadian law firm">
+  <meta name="author" content="VISTA Law">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://vistallp.ca/">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="VISTA Law | Expert Legal Services in Toronto">
+  <meta property="og:description" content="Expert legal representation for corporate, real estate, and litigation matters in Toronto, Ontario.">
+  <meta property="og:url" content="https://vistallp.ca/">
+  <meta property="og:site_name" content="VISTA Law">
+  <meta property="og:locale" content="en_CA">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="VISTA Law | Expert Legal Services">
+  <meta name="twitter:description" content="Expert legal representation in Toronto, Ontario.">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-[#0d121b] dark:text-gray-100 overflow-x-hidden antialiased">
